fix unaligned form elements

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1986,7 +1986,7 @@ nav.nav li li {
   display: inline-block;
   float: left;
   overflow: hidden;
-  width: 15.8333333333333%;
+  width: 16.6666666666667%;
   margin: 0 0.4166666666667%;
   border-bottom-right-radius: 3px;
   border-top-right-radius: 3px;
